--- a/01-Angular/galeria/src/app/item-galeria/item-galeria.component.html
+++ b/01-Angular/galeria/src/app/item-galeria/item-galeria.component.html
@@ -1,4 +1,7 @@
 <h1 class="rojo">Item galeria - {{title}}</h1>
+<!-- {{}} ->  Interpolacion -->
 <p>Nombre: {{nombreItem}}</p>
-<!-- EVENT BINDING () ->  Evento -->
-<button (click)="alertar()"> {{textoBoton}}</button>
+<!-- () EVENT BINDING ->  Evento -->
+<button (blur)="alertarBlur()" (click)="alertar()">
+     {{textoBoton}}
+    </button>
