--- a/01-Angular/galeria/src/app/item-galeria/item-galeria.component.html
+++ b/01-Angular/galeria/src/app/item-galeria/item-galeria.component.html
@@ -2,6 +2,15 @@
 <!-- {{}} ->  Interpolacion -->
 <p>Nombre: {{nombreItem}}</p>
 <!-- () EVENT BINDING ->  Evento -->
-<button (blur)="alertarBlur()" (click)="alertar()">
+<button (click)="alertar()">
      {{textoBoton}}
     </button>
+
+<!-- [] Property Binding -> Propiedades/Atributos -->
+<img [src]="url" alt="" 
+(click)="cambiarImagen()">
+
+<!-- Directiva -> *ngFor  -->
+<p *ngFor="let nota of notas">
+   {{nota}}
+</p>
