--- a/01-Angular/galeria/src/app/app.component.html
+++ b/01-Angular/galeria/src/app/app.component.html
@@ -1,11 +1,18 @@
-<h1 class="rojo">Titulo {{title}}</h1>
+<h1 [class]="claseTitulo">Titulo {{title}}</h1>
 <!-- {{interpolacion}}  -->
-<app-item-galeria 
+
+<button (click)="mostrar(true)">Mostrar</button>
+
+<button (click)="mostrar(false)">Ocultar</button>
+
+<div *ngIf="estaMostrando">
+    <app-item-galeria 
     *ngFor="let flor of arregloFloresJs"
+    [titulo]="flor.titulo"
     [textoBoton]="flor.nombre"
     [nombreItem]="flor.descripcion"
     (cambioChela)="cambioChela($event)"
     (cambioCerveza)="cambioCerveza($event)"
->
-
-</app-item-galeria>
+    >
+    </app-item-galeria>
+</div>
