--- a/01-Angular/galeria/src/app/item-galeria/item-galeria.component.html
+++ b/01-Angular/galeria/src/app/item-galeria/item-galeria.component.html
@@ -11,6 +11,8 @@
 (click)="cambiarImagen()">
 
 <!-- Directiva -> *ngFor  -->
-<p *ngFor="let nota of notas">
-   {{nota}}
-</p>
+<div *ngFor="let nota of notas">
+   <button (click)="agregarCarrito(nota)">
+       Anadir: {{nota}}
+    </button>
+</div>
