Refactor items de carrito

--- a/01-Angular/galeria/src/app/app.component.html
+++ b/01-Angular/galeria/src/app/app.component.html
@@ -15,6 +15,7 @@
     [titulo]="flor.titulo"
     [textoBoton]="flor.nombre"
     [nombreItem]="flor.descripcion"
+    [notas]="flor.notas"
     (cambioChela)="cambioChela($event)"
     (cambioCerveza)="cambioCerveza($event)"
     >
