--- a/02-ionic/tinderpoli/src/global.scss
+++ b/02-ionic/tinderpoli/src/global.scss
@@ -9,3 +9,9 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+
+
+ion-label{
+    font-size: 1rem;
+    color:blue;
+}
